testdata/baselines/reference/submodule/compiler/extBaseClass2.errors.txt
extBaseClass2.ts(2,31): error TS2339: Property 'B' does not exist on type '{ C5: { new(): C5; prototype: C5; }; }'.
extBaseClass2.ts(7,29): error TS2304: Cannot find name 'B'.


==== extBaseClass2.ts (2 errors) ====
    module N {
        export class C4 extends M.B {
                                  ~
!!! error TS2339: Property 'B' does not exist on type '{ C5: { new(): C5; prototype: C5; }; }'.
        }
    }
    
    module M {
        export class C5 extends B {
                                ~
!!! error TS2304: Cannot find name 'B'.
        }
    }
    